# cmake_test

./: CMakeLists.txt  main.cpp
include/: Date.h  event.h
src/: CMakeLists.txt  Date.cpp  Makefile  cmake_install.cmake
